--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
             function showPage(page_no) {
-                page = `Mantra_${lang}_${page_no}.html`;
+                page = `RigVeda/Mantra_${lang}_${page_no}.html`;
                 fetch(page)
                     .then(response => response.text())
                     .then(data => {
